# io-link-master-shield-hat-sw

./: .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  debug.sh  make.sh  program.sh  toolchain-raspi.cmake
Arduino/: main.cpp
Arduino/Demonstrator/: .gitignore  BalluffBni0088.cpp  Demonstrator.doxyfile  Demonstrator.ino  Demonstrator_V1_0.cpp  HardwareArduino.cpp  IOLGenericDevice.cpp  IOLMasterPort.cpp  IOLMasterPort.h  IOLMasterPortMax14819.cpp  IOLink.h  Max14819.cpp  Max14819.h  spec.d
Demonstrator/: CMakeLists.txt  Demonstrator.ino  Demonstrator.sln  Makefile  toolchain-rpi.cmake
Demonstrator/Doxygen/html/: _balluf_bus0023_8h.html  _balluff_bni0088_8h_source.html  _i_o_l_generic_device_8h_source.html  _i_o_l_master_port_8cpp.html  _max14819_8h_source.html  class_balluff_bni0088.html  class_i_o_l_master_port-members.html  classes.html  classmax14819_1_1_max14819.html  files.html  functions_func.html  globals.html  globals_func.html  globals_vars.html  hierarchy.html  namespace_i_o_l_1_1_p_a_g_e.html  namespacemax14819.html  namespacemembers_b.html  namespacemembers_e.html  namespacemembers_eval.html  namespacemembers_vars_b.html  namespacemembers_vars_c.html  namespacemembers_vars_f.html  namespacemembers_vars_n.html  namespacemembers_vars_v.html  test_routines_8h_source.html
Demonstrator/Doxygen/html/search/: all_11.js  all_2.js  functions_3.js  functions_9.js  namespaces_0.js  namespaces_1.js  variables_11.js  variables_6.js  variables_8.js  variables_b.js  variables_c.js
Demonstrator/include/: BallufBus0023.h  BalluffBni0088.h  BalluffBus0023.h  Demonstrator_V1_0.h  HardwareBase.h  HardwareRaspberry.h  IOLGenericDevice.h  IOLink.h  Max14819.h
Demonstrator/src/: BallufBus0023.cpp  BalluffBni0088.cpp  BalluffBus0023.cpp  Demonstrator_V1_0.cpp  Demonstrator_V1_0.h  HardwareArduino.cpp  HardwareBase.cpp  HardwareBase.h  HardwareRaspberry.cpp  HardwareRaspberry.h  IOLGenericDevice.cpp  IOLGenericDevice.h  IOLMasterPort.cpp  IOLMasterPort.h  IOLMasterPortMax14819.cpp  IOLMasterPortMax14819.h  IOLink.h  Max14819.cpp  Max14819.h  main.cpp
RaspberryPi/: Anleitung SPI.txt  README.md
RaspberryPi/Demonstrator/: BallufBus0023.cpp  CMakeLists.txt  Demonstrator_V1_0.cpp  Demonstrator_V1_0.h  HardwareArduino.h  HardwareRaspberry.cpp  HardwareRaspberry.h  IOLGenericDevice.cpp  IOLMasterPort.h  IOLMasterPortMax14819.cpp  IOLMasterPortMax14819.h  Makefile  Max14819.cpp  Max14819.h  main.cpp
RaspberryPi/Demonstrator/include/: HardwareBase.h  HardwareRaspberry.h  Max14819.h
RaspberryPi/Demonstrator/src/: BallufBus0023.cpp  Demonstrator_V1_0.cpp  HardwareRaspberry.cpp  IOLGenericDevice.cpp  IOLMasterPortMax14819.cpp  Max14819.cpp
doc/: Doxyfile
doc/html/: _balluf_bus0023_8cpp.html  _demonstrator___v1__0_8cpp.html  _demonstrator___v1__0_8h.html  _i_o_l_generic_device_8cpp.html  _i_o_l_master_port_max14819_8cpp.html  _i_o_link_8h_source.html  class_i_o_l_master_port_max14819-members.html  functions.html  functions_vars.html  index.html  menudata.js  namespace_i_o_l_1_1_m_c.html  namespacemembers_enum.html  namespacemembers_n.html  namespacemembers_p.html  namespacemembers_s.html  namespacemembers_v.html  namespacemembers_vars_d.html  namespacemembers_vars_r.html  namespacemembers_vars_s.html  (+3 more)
examples/: CMakeLists.txt  Demonstrator.ino  Demonstrator_V1_0.cpp  Demonstrator_V1_0.h  Makefile  main.cpp
script/: setup_ssh_fs.sh
src/: BalluffBus0023.h  CMakeLists.txt  ErrorCode.hpp  HardwareArduino.h  HardwareRaspberry.h  IOLMasterPort.h  IOLMasterPortMax14819.cpp  OpenIOLink.hpp  file_header_template.txt  global_typedef.hpp  method_documentation_template.txt  platform.hpp
src/BSP/: HardwareRaspberry.h  IOLMasterPortMax14819.cpp
src/board/: BicolorLed.cpp  BicolorLed.hpp  HardwareArduino.cpp  HardwareArduino.hpp  HardwareDummy.cpp  HardwareDummy.hpp  HardwareDummyChip.cpp  HardwareDummyChip.hpp  HardwareRaspberry.cpp  HardwareRaspberry.hpp  IOLMasterPortMax14819.cpp  IOLMasterPortMax14819.hpp  MapperChip.hpp  MapperChip_Raspberry.hpp  MapperChip_ShieldHat.hpp  MapperIOLPort.hpp  MapperIOLPort_Arduino.hpp  MapperIOLPort_Raspberry.hpp  MapperSpi.hpp  Max14819.cpp  Max14819.hpp  Max14819.hpp_RegisterDefs.bak.hpp  Max14819_Base.hpp  Max14819_Port.cpp  Max14819_Port.hpp  Max14819_old.cpp  OpeniolinkShieldHat.cpp  OpeniolinkShieldHat.hpp  Pin_Arduino.cpp  Pin_Arduino.hpp  Pin_Raspberry.cpp  PrintAndWait.hpp  SpiArduino.cpp  SpiArduino.hpp  SpiRaspberry.cpp  SpiRaspberry.hpp  platform.hpp  typedefs_board.hpp
src/board/arduino/: MapperChip_Arduino.hpp  MapperIOLPort_Arduino.hpp  Pin_Arduino.cpp  Pin_Arduino.hpp  PrintAndWait.cpp  PrintAndWait_Arduino.cpp  SpiArduino.cpp  SpiArduino.hpp  Spi_Arduino.cpp  Spi_Arduino.hpp
src/board/dummy/: HardwareDummy.cpp
src/board/raspberry/: HardwareRaspberry.hpp  MapperChip_Raspberry.hpp  MapperIOLPort_Raspberry.hpp  Pin_Raspberry.cpp  Pin_Raspberry.hpp  PrintAndWait.cpp  PrintAndWait_Raspberry.cpp  SpiRaspberry.cpp  SpiRaspberry.hpp  Spi_Raspberry.cpp  Spi_Raspberry.hpp
src/protocol/: ALServiceObserver.cpp  ALServiceObserver.hpp  ApplicationLayer.cpp  ApplicationLayer.hpp  DataLinkLayer.cpp  DataLinkLayer.hpp  HardwareBase.cpp  HardwareBase.hpp  IOLGenericDevice.cpp  IOLGenericDevice.hpp  IOLMaster.cpp  IOLMaster.hpp  IOLMasterPort.cpp  IOLMasterPort.h  IOLMasterPort.hpp  IOLMasterPort_old.cpp  IOLMasterPort_old.hpp  IOLMasterStackDriver.cpp  IOLMasterStackDriver.hpp  IOLMasterStackPort.cpp  IOLMasterStackPort.hpp  IOLMessage.cpp  IOLMessage.hpp  IOLink.h  IOLink.hpp  IOLinkConfig.hpp  PortModeObserver.cpp  PortModeObserver.hpp  SystemManagement.cpp  SystemManagement.hpp  global_protocol.cpp  global_protocol.hpp
src/sensors/: BalluffBni0088.cpp  BalluffBni0088.h  BalluffBni0088.hpp  BalluffBus0023.cpp  BalluffBus0023.hpp
test/: CMakeLists.txt
test/board/: CMakeLists.txt  test_MapperChip.cpp  test_MapperIOLPort.cpp  test_board_arduino.cpp  test_board_dummy.cpp  test_board_raspi.cpp
test/protocol/: CMakeLists.txt  test_DL_ModeHandler.cpp  test_protocol.cpp
toolchains/: toolchain-raspi.cmake
(+113 files in other folders)
